dependensi.txt
[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = "0.96"
async-tensorrt = "0.9"
async-cuda = "0.6"



# TensorRT libs ada?
ls /usr/lib/aarch64-linux-gnu/libnvinfer.so* | head

# CUDA runtime ada?
ls /usr/local/cuda/lib64/libcudart.so*

# OpenCV (dari JetPack) ada?
pkg-config --modversion opencv4



kalau gak ketemu :
sudo apt-get update
sudo apt-get install -y libopencv-dev pkg-config


cek kamera :
# lihat device
v4l2-ctl --list-devices
# sanity-check streaming
ffplay -f video4linux2 -i /dev/video0   # (Ctrl+C untuk stop)


kalau permition ditolak :
sudo usermod -aG video $USER
# lalu logout/login ulang (atau sementara: sudo -E cargo run ...)



set ld library path :
export LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu:/usr/lib/aarch64-linux-gnu/tegra:/usr/local/cuda/lib64:$LD_LIBRARY_PATH


cd ~/tugasakhir-fairuz/veh-counter-rs

# build cepat (optimasi)
cargo build --release

# jalankan
./target/release/veh-counter-rs


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
ndarray = "0.15"
# GStreamer
gstreamer = "0.22"
gstreamer-app = "0.22"
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TensorRT Rust (async)
async-tensorrt = "0.9"
async-cuda = "0.6"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
ndarray = "0.15"

# GStreamer untuk capture kamera
gstreamer = "0.22"
gstreamer-app = "0.22"

# Inference ONNX (CPU) — gampang build di Jetson
tract-onnx = "0.21"
tract-ndarray = "0.21"


ahmadradhy@ubuntu:~/Image_processing$ cargo build
   Compiling image_processor v0.1.0 (/home/ahmadradhy/Image_processing)
error[E0433]: failed to resolve: could not find `VectorOfMat` in `types`
   --> src/main.rs:207:27
    |
207 |     let mut outs = types::VectorOfMat::new();
    |                           ^^^^^^^^^^^ could not find `VectorOfMat` in `types`

error[E0277]: the trait bound `BoxedRef<'_, Mat>: ToOutputArray` is not satisfied
  --> src/main.rs:47:21
   |
47 |     resized.copy_to(&mut target)?;
   |             ------- ^^^^^^^^^^^ the trait `ToOutputArray` is not implemented for `BoxedRef<'_, Mat>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `ToOutputArray`:
             &mut BoxedRefMut<'_, T>
             &mut Mat
             &mut Matx<T, A>
             &mut UMat
             &mut VecN<T, N>
             &mut Vector<Mat>
             &mut Vector<Point3_<f32>>
             &mut Vector<Point3_<f64>>
           and 71 others
note: required by a bound in `opencv::prelude::MatTraitConst::copy_to`
  --> /home/ahmadradhy/gen_npy/target/debug/build/opencv-058e00f923e73981/out/opencv/core.rs:16095:3

error[E0282]: type annotations needed for `Vec<_>`
  --> src/main.rs:65:9
   |
65 |     let mut keep = Vec::new();
   |         ^^^^^^^^
...
68 |             if d.cls == k.cls && iou(&d, k) > iou_t { continue 'outer; }
   |                         ----- type must be known at this point
   |
help: consider giving `keep` an explicit type, where the type for type parameter `T` is specified
   |
65 |     let mut keep: Vec<T> = Vec::new();
   |                 ++++++++



ahmadradhy@ubuntu:~/Image_processing$ cargo build
   Compiling image_processor v0.1.0 (/home/ahmadradhy/Image_processing)
error[E0277]: the `?` operator can only be applied to values that implement `Try`
   --> src/main.rs:289:17
    |
289 |     let total = out.total()? as usize;
    |                 ^^^^^^^^^^^^ the `?` operator cannot be applied to type `usize`
    |
    = help: the trait `Try` is not implemented for `usize`

warning: unnecessary `unsafe` block
  --> src/main.rs:49:26
   |
49 |         let mut target = unsafe { Mat::roi_mut(&mut canvas, roi)? };
   |                          ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` on by default

For more information about this error, try `rustc --explain E0277`.
warning: `image_processor` (bin "image_processor") generated 1 warning
error: could not compile `image_processor` (bin "image_processor") due to 1 previous error; 1 warning emitted


ahmadradhy@ubuntu:~/Image_processing$ cargo build
   Compiling image_processor v0.1.0 (/home/ahmadradhy/Image_processing)
error[E0277]: the trait bound `BoxedRef<'_, Mat>: ToOutputArray` is not satisfied
  --> src/main.rs:49:21
   |
49 |     resized.copy_to(&mut target)?;
   |             ------- ^^^^^^^^^^^ the trait `ToOutputArray` is not implemented for `BoxedRef<'_, Mat>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `ToOutputArray`:
             &mut BoxedRefMut<'_, T>
             &mut Mat
             &mut Matx<T, A>
             &mut UMat
             &mut VecN<T, N>
             &mut Vector<Mat>
             &mut Vector<Point3_<f32>>
             &mut Vector<Point3_<f64>>
           and 71 others
note: required by a bound in `opencv::prelude::MatTraitConst::copy_to`
  --> /home/ahmadradhy/gen_npy/target/debug/build/opencv-058e00f923e73981/out/opencv/core.rs:16095:3

warning: unnecessary `unsafe` block
   --> src/main.rs:250:24
    |
250 |     let flat: &[f32] = unsafe { out.data_typed()? };
    |                        ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` on by default

For more information about this error, try `rustc --explain E0277`.
warning: `image_processor` (bin "image_processor") generated 1 warning
error: could not compile `image_processor` (bin "image_processor") due to 1 previous error; 1 warning emitted


Some errors have detailed explanations: E0277, E0282, E0433.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `image_processor` (bin "image_processor") due to 3 previous errors



ahmadradhy@ubuntu:~/Image_processing$ cargo build
   Compiling image_processor v0.1.0 (/home/ahmadradhy/Image_processing)
error[E0277]: the trait bound `BoxedRef<'_, Mat>: ToOutputArray` is not satisfied
  --> src/main.rs:49:21
   |
49 |     resized.copy_to(&mut target)?;
   |             ------- ^^^^^^^^^^^ the trait `ToOutputArray` is not implemented for `BoxedRef<'_, Mat>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `ToOutputArray`:
             &mut BoxedRefMut<'_, T>
             &mut Mat
             &mut Matx<T, A>
             &mut UMat
             &mut VecN<T, N>
             &mut Vector<Mat>
             &mut Vector<Point3_<f32>>
             &mut Vector<Point3_<f64>>
           and 71 others
note: required by a bound in `opencv::prelude::MatTraitConst::copy_to`
  --> /home/ahmadradhy/gen_npy/target/debug/build/opencv-058e00f923e73981/out/opencv/core.rs:16095:3

warning: unnecessary `unsafe` block
   --> src/main.rs:250:24
    |
250 |     let flat: &[f32] = unsafe { out.data_typed()? };
    |                        ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` on by default

For more information about this error, try `rustc --explain E0277`.
warning: `image_processor` (bin "image_processor") generated 1 warning
error: could not compile `image_processor` (bin "image_processor") due to 1 previous error; 1 warning emitted
ahmadradhy@ubuntu:~/Image_processing$ cargo build
   Compiling image_processor v0.1.0 (/home/ahmadradhy/Image_processing)
error[E0425]: cannot find function `copy_make_border` in module `imgproc`
  --> src/main.rs:50:14
   |
50 |     imgproc::copy_make_border(
   |              ^^^^^^^^^^^^^^^^ not found in `imgproc`
   |
help: consider importing one of these functions
   |
 1 + use crate::core::copy_make_border;
   |
 1 + use opencv::core::copy_make_border;
   |
help: if you import `copy_make_border`, refer to it directly
   |
50 -     imgproc::copy_make_border(
50 +     copy_make_border(
   |

error[E0425]: cannot find value `BORDER_CONSTANT` in module `imgproc`
  --> src/main.rs:57:18
   |
57 |         imgproc::BORDER_CONSTANT,
   |                  ^^^^^^^^^^^^^^^ not found in `imgproc`
   |
help: consider importing one of these items
   |
 1 + use crate::core::BORDER_CONSTANT;
   |
 1 + use crate::core::BorderTypes::BORDER_CONSTANT;
   |
 1 + use opencv::core::BORDER_CONSTANT;
   |
 1 + use opencv::core::BorderTypes::BORDER_CONSTANT;
   |
help: if you import `BORDER_CONSTANT`, refer to it directly
   |
57 -         imgproc::BORDER_CONSTANT,
57 +         BORDER_CONSTANT,
   |

warning: variable does not need to be mutable
   --> src/main.rs:208:9
    |
208 |     let mut blob = dnn::blob_from_image(
    |         ----^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `image_processor` (bin "image_processor") generated 1 warning
error: could not compile `image_processor` (bin "image_processor") due to 2 previous errors; 1 warning emitted

